--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Reset dan font */
 body {
   margin: 0;
-  font-family: 'Comic Sans MS', cursive, sans-serif;
+  font-family: 'Comic Sans MS', sans-serif;
   background-color: #fff8dc;
   color: #333;
 }
